--- a/react-app/repairo/package.json
+++ b/react-app/repairo/package.json
@@ -12,8 +12,10 @@
     "react": "^16.14.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.1.0",
     "react-scripts": "3.4.1",
     "reactstrap": "^8.8.1",
+    "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
